v.0.5.1 Gráfico de convergência ELBO funcionando

--- a/BTST Novo V2.ipynb
+++ b/BTST Novo V2.ipynb
@@ -1675,8 +1675,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-09T16:00:15.388925Z",
-     "start_time": "2025-07-09T16:00:14.828655Z"
+     "end_time": "2025-07-09T16:04:11.145778Z",
+     "start_time": "2025-07-09T16:04:11.000554Z"
     }
    },
    "cell_type": "code",
@@ -1684,9 +1684,8 @@
     "# ================================================================\n",
     "# 09_vi_step3c_diagnostics.py – ELBO & Posterior Diagnostics\n",
     "# ----------------------------------------------------------------\n",
-    "# • NÃO reexecuta VI! Somente plota a curva ELBO, extrai 1 000 amostras\n",
-    "#   do surrogate posterior já treinado e salva em Parquet.\n",
-    "# • Usa colormap viridis para a linha do gráfico (atende ao padrão).\n",
+    "# • Plota ELBO × iteração (linha viridis).\n",
+    "# • Amostra 1 000 draws da posterior, salva coeficientes e tendência.\n",
     "# ================================================================\n",
     "\n",
     "from pathlib import Path\n",
@@ -1696,51 +1695,49 @@
     "import matplotlib as mpl\n",
     "import tensorflow_probability as tfp\n",
     "\n",
-    "# ----- Verifica que os objetos do VI estão em memória -----\n",
-    "assert \"surrogate_posterior\" in globals(), (\n",
-    "    \"Surrogate posterior ausente – execute Steps 3‑a e 3‑b primeiro.\")\n",
-    "assert Path(\"datasets/vi_elbo.npy\").exists(), \"Arquivo vi_elbo.npy não encontrado (rode Step 3‑b).\"\n",
+    "# ----- Checagem -----\n",
+    "assert \"surrogate_posterior\" in globals(), \"Surrogate posterior ausente. Rode 3‑a e 3‑b.\"\n",
+    "ELBO_PATH = Path(\"datasets\") / \"vi_elbo.npy\"\n",
+    "assert ELBO_PATH.exists(), \"vi_elbo.npy não encontrado. Rode 3‑b.\"\n",
     "\n",
-    "ELBO_PATH  = Path(\"datasets\") / \"vi_elbo.npy\"\n",
     "COEF_PATH  = Path(\"datasets\") / \"coef_posterior.parquet\"\n",
     "TREND_PATH = Path(\"datasets\") / \"trend_posterior.parquet\"\n",
     "\n",
-    "# ----- 1. Plot ELBO x iteração (viridis) -----\n",
+    "# ----- 1. Plot ELBO -----\n",
     "losses = np.load(ELBO_PATH)\n",
-    "color = mpl.colormaps.get_cmap(\"viridis\")(0.6)\n",
     "plt.figure(figsize=(6, 3))\n",
-    "plt.plot(-losses, lw=1.2, color=color)\n",
+    "plt.plot(-losses, color=mpl.colormaps.get_cmap(\"viridis\")(0.6), lw=1.2)\n",
     "plt.xlabel(\"Iteração\")\n",
     "plt.ylabel(\"ELBO\")\n",
     "plt.title(\"Convergência da ELBO\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# ----- 2. Sample posterior (1 000 draws) -----\n",
-    "print(\"📦  Samplando 1 000 draws da posterior…\")\n",
+    "# ----- 2. Sample posterior -----\n",
+    "print(\"📦  Samplando 1 000 draws da posterior…\")\n",
     "samples = surrogate_posterior.sample(1000)\n",
     "\n",
-    "# Extração de coeficientes (peso das features)\n",
-    "weights = samples[\"HierLinearRegs/_weights\"].numpy()  # shape (1000, n_features)\n",
+    "# --- Coeficientes ---\n",
+    "weights = samples[\"HierLinearRegs/_weights\"].numpy()  # possivelmente (1000, chains, feats)\n",
+    "weights = weights.reshape(-1, weights.shape[-1])       # flatten draws×chains → 2‑D\n",
+    "\n",
     "feature_cols = globals().get(\"feature_cols\")\n",
     "if feature_cols is None:\n",
-    "    # fallback: lê do parquet\n",
-    "    import pandas as pd\n",
     "    df_tmp = pd.read_parquet(Path(\"datasets\") / \"train_initial.parquet\")\n",
     "    feature_cols = [c for c in df_tmp.columns if c not in {\"slope_kg_per_week\", \"window_start\"}]\n",
     "\n",
     "coef_df = pd.DataFrame(weights, columns=feature_cols)\n",
     "coef_df.to_parquet(COEF_PATH, index=False)\n",
     "\n",
-    "# Tendência: salva escala do nível (ou todo vetor)\n",
-    "trend_scale = samples[\"LocalLinearTrend/_level_scale\"].numpy()\n",
+    "# --- Tendência ---\n",
+    "trend_scale = samples[\"LocalLinearTrend/_level_scale\"].numpy().reshape(-1)  # garante 1‑D\n",
     "pd.DataFrame({\"trend_level_scale\": trend_scale}).to_parquet(TREND_PATH, index=False)\n",
     "\n",
-    "# ----- 3. Resumo dos coeficientes -----\n",
-    "print(\"\\n── Resumo coeficientes (1 000 amostras) ───────────────────────────\")\n",
+    "# ----- 3. Resumo rápido -----\n",
+    "print(\"\\n── Resumo coeficientes (\", len(coef_df), \"amostras) ─────────────────────\")\n",
     "print(coef_df.describe().T[[\"mean\", \"std\", \"min\", \"25%\", \"50%\", \"75%\", \"max\"]].round(3))\n",
     "\n",
-    "print(f\"\\n1 000 amostras de coeficientes salvas em: {COEF_PATH}\")\n",
+    "print(f\"\\nAmostras de coeficientes salvas em: {COEF_PATH}\")\n",
     "print(f\"Posterior da tendência salva em: {TREND_PATH}\")\n"
    ],
    "id": "ece609d52151cf21",
@@ -1759,25 +1756,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📦  Samplando 1 000 draws da posterior…\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Must pass 2-d input. shape=(1000, 12, 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[15], line 49\u001B[0m\n\u001B[1;32m     46\u001B[0m     df_tmp \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_parquet(Path(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdatasets\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtrain_initial.parquet\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     47\u001B[0m     feature_cols \u001B[38;5;241m=\u001B[39m [c \u001B[38;5;28;01mfor\u001B[39;00m c \u001B[38;5;129;01min\u001B[39;00m df_tmp\u001B[38;5;241m.\u001B[39mcolumns \u001B[38;5;28;01mif\u001B[39;00m c \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m {\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mslope_kg_per_week\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mwindow_start\u001B[39m\u001B[38;5;124m\"\u001B[39m}]\n\u001B[0;32m---> 49\u001B[0m coef_df \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mDataFrame\u001B[49m\u001B[43m(\u001B[49m\u001B[43mweights\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcolumns\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mfeature_cols\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     50\u001B[0m coef_df\u001B[38;5;241m.\u001B[39mto_parquet(COEF_PATH, index\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[1;32m     52\u001B[0m \u001B[38;5;66;03m# Tendência: salva escala do nível (ou todo vetor)\u001B[39;00m\n",
-      "File \u001B[0;32m~/Documents/TCC v2/.venv/lib/python3.9/site-packages/pandas/core/frame.py:827\u001B[0m, in \u001B[0;36mDataFrame.__init__\u001B[0;34m(self, data, index, columns, dtype, copy)\u001B[0m\n\u001B[1;32m    816\u001B[0m         mgr \u001B[38;5;241m=\u001B[39m dict_to_mgr(\n\u001B[1;32m    817\u001B[0m             \u001B[38;5;66;03m# error: Item \"ndarray\" of \"Union[ndarray, Series, Index]\" has no\u001B[39;00m\n\u001B[1;32m    818\u001B[0m             \u001B[38;5;66;03m# attribute \"name\"\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    824\u001B[0m             copy\u001B[38;5;241m=\u001B[39m_copy,\n\u001B[1;32m    825\u001B[0m         )\n\u001B[1;32m    826\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m--> 827\u001B[0m         mgr \u001B[38;5;241m=\u001B[39m \u001B[43mndarray_to_mgr\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    828\u001B[0m \u001B[43m            \u001B[49m\u001B[43mdata\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    829\u001B[0m \u001B[43m            \u001B[49m\u001B[43mindex\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    830\u001B[0m \u001B[43m            \u001B[49m\u001B[43mcolumns\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    831\u001B[0m \u001B[43m            \u001B[49m\u001B[43mdtype\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdtype\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    832\u001B[0m \u001B[43m            \u001B[49m\u001B[43mcopy\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcopy\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    833\u001B[0m \u001B[43m            \u001B[49m\u001B[43mtyp\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mmanager\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    834\u001B[0m \u001B[43m        \u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    836\u001B[0m \u001B[38;5;66;03m# For data is list-like, or Iterable (will consume into list)\u001B[39;00m\n\u001B[1;32m    837\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m is_list_like(data):\n",
-      "File \u001B[0;32m~/Documents/TCC v2/.venv/lib/python3.9/site-packages/pandas/core/internals/construction.py:314\u001B[0m, in \u001B[0;36mndarray_to_mgr\u001B[0;34m(values, index, columns, dtype, copy, typ)\u001B[0m\n\u001B[1;32m    312\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m    313\u001B[0m         values \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39masarray(values)\n\u001B[0;32m--> 314\u001B[0m     values \u001B[38;5;241m=\u001B[39m \u001B[43m_ensure_2d\u001B[49m\u001B[43m(\u001B[49m\u001B[43mvalues\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    316\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m    317\u001B[0m     \u001B[38;5;66;03m# by definition an array here\u001B[39;00m\n\u001B[1;32m    318\u001B[0m     \u001B[38;5;66;03m# the dtypes will be coerced to a single dtype\u001B[39;00m\n\u001B[1;32m    319\u001B[0m     values \u001B[38;5;241m=\u001B[39m _prep_ndarraylike(values, copy\u001B[38;5;241m=\u001B[39mcopy_on_sanitize)\n",
-      "File \u001B[0;32m~/Documents/TCC v2/.venv/lib/python3.9/site-packages/pandas/core/internals/construction.py:592\u001B[0m, in \u001B[0;36m_ensure_2d\u001B[0;34m(values)\u001B[0m\n\u001B[1;32m    590\u001B[0m     values \u001B[38;5;241m=\u001B[39m values\u001B[38;5;241m.\u001B[39mreshape((values\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m], \u001B[38;5;241m1\u001B[39m))\n\u001B[1;32m    591\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m values\u001B[38;5;241m.\u001B[39mndim \u001B[38;5;241m!=\u001B[39m \u001B[38;5;241m2\u001B[39m:\n\u001B[0;32m--> 592\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mMust pass 2-d input. shape=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mvalues\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    593\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m values\n",
-      "\u001B[0;31mValueError\u001B[0m: Must pass 2-d input. shape=(1000, 12, 12)"
+      "📦  Samplando 1 000 draws da posterior…\n",
+      "\n",
+      "── Resumo coeficientes ( 12000 amostras) ─────────────────────\n",
+      "                         mean    std    min    25%    50%    75%    max\n",
+      "Fat_pct_mean            0.007  0.021 -0.097 -0.005  0.003  0.014  0.113\n",
+      "Total_kcal_mean         0.004  0.024 -0.106 -0.009  0.004  0.015  0.140\n",
+      "Steps_mean              0.014  0.025 -0.134  0.004  0.015  0.027  0.150\n",
+      "RestingHR_mean         -0.006  0.018 -0.114 -0.015 -0.005  0.002  0.084\n",
+      "HRV_mean               -0.001  0.015 -0.073 -0.010 -0.001  0.006  0.091\n",
+      "SleepDur_mean          -0.011  0.024 -0.169 -0.022 -0.009  0.002  0.094\n",
+      "Water_ml_mean          -0.002  0.029 -0.214 -0.014  0.001  0.013  0.153\n",
+      "Activity_kcal_fraction -0.001  0.025 -0.163 -0.013 -0.001  0.009  0.141\n",
+      "DeepFrac_mean          -0.006  0.027 -0.141 -0.017 -0.005  0.006  0.143\n",
+      "Circumference_cm_med   -0.003  0.022 -0.108 -0.014 -0.004  0.007  0.127\n",
+      "Standing_variability   -0.000  0.014 -0.071 -0.007 -0.000  0.008  0.087\n",
+      "Protein_per_kg_mean     0.010  0.046 -0.257 -0.012  0.011  0.036  0.250\n",
+      "\n",
+      "Amostras de coeficientes salvas em: datasets/coef_posterior.parquet\n",
+      "Posterior da tendência salva em: datasets/trend_posterior.parquet\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 17
   }
  ],
  "metadata": {
