v.0.5.2 O Walk Forward está mostrando resultados bons, mas insuficientes, ainda (MAE = 0.020 / cobertura80% = 69.2%)

--- a/BTST Novo V2.ipynb
+++ b/BTST Novo V2.ipynb
@@ -1779,6 +1779,127 @@
     }
    ],
    "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Walk forward",
+   "id": "8276fae90e5af399"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# ================================================================\n",
+    "# 10_walk_forward_validation.py – Passo 4: Walk-Forward Validation\n",
+    "# ----------------------------------------------------------------\n",
+    "# • Reconstrói o modelo a cada passo com constant_offset correto.\n",
+    "# • Usa forecast.mean() + percentis 10/90 para IC80.\n",
+    "# ================================================================\n",
+    "\n",
+    "from pathlib import Path\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_probability as tfp\n",
+    "\n",
+    "# ----- Configurações -----\n",
+    "TRAIN_PARQ = Path(\"datasets\") / \"train_initial.parquet\"\n",
+    "WALK_PARQ  = Path(\"datasets\") / \"walk_forward.parquet\"\n",
+    "PRED_PARQ  = Path(\"datasets\") / \"walk_preds.parquet\"\n",
+    "METRICS_JS = Path(\"datasets\") / \"walk_metrics.json\"\n",
+    "\n",
+    "TARGET = \"slope_kg_per_week\"\n",
+    "DATE   = \"window_start\"\n",
+    "NUM_DRAWS = 500  # draws da posterior para forecast\n",
+    "\n",
+    "# ----- Carrega dados -----\n",
+    "df_train0 = pd.read_parquet(TRAIN_PARQ)\n",
+    "df_walk   = pd.read_parquet(WALK_PARQ)\n",
+    "feature_cols = [c for c in df_train0.columns if c not in {TARGET, DATE}]\n",
+    "\n",
+    "# ----- Template da tendência -----\n",
+    "trend_template = tfp.sts.LocalLinearTrend(observed_time_series=None)\n",
+    "# Tensor para constant_offset em float32\n",
+    "constant_offset = tf.constant(0.0, dtype=tf.float32)\n",
+    "\n",
+    "# ----- Função de forecast de 1 passo -----\n",
+    "def forecast_one_step(y_hist_np: np.ndarray, x_hist_np: np.ndarray, x_future_np: np.ndarray):\n",
+    "    # Converte para float32\n",
+    "    y_hist = y_hist_np.astype(np.float32)\n",
+    "    x_hist = x_hist_np.astype(np.float32)\n",
+    "    x_future = x_future_np.astype(np.float32)\n",
+    "\n",
+    "    # Design matrix completo e y extendido\n",
+    "    X_full = np.vstack([x_hist, x_future])\n",
+    "    y_ext  = np.concatenate([y_hist, [np.nan]]).astype(np.float32)\n",
+    "\n",
+    "    # Componente de regressão com nome consistente\n",
+    "    reg = tfp.sts.LinearRegression(\n",
+    "        design_matrix=X_full,\n",
+    "        name=\"HierLinearRegs\"\n",
+    "    )\n",
+    "    # Modelo com offset explícito (float32)\n",
+    "    model_step = tfp.sts.Sum(\n",
+    "        components=[trend_template, reg],\n",
+    "        observed_time_series=y_ext,\n",
+    "        constant_offset=constant_offset,\n",
+    "    )\n",
+    "\n",
+    "    # Amostras da posterior treinada\n",
+    "    param_samples = surrogate_posterior.sample(NUM_DRAWS)\n",
+    "    # Forecast de 1 passo\n",
+    "    fc_dist = tfp.sts.forecast(\n",
+    "        model_step,\n",
+    "        observed_time_series=y_hist,\n",
+    "        parameter_samples=param_samples,\n",
+    "        num_steps_forecast=1,\n",
+    "        include_observation_noise=True\n",
+    "\n",
+    "    )\n",
+    "    # Médias condicionais por draw\n",
+    "    means = fc_dist.mean().numpy().reshape(-1)\n",
+    "    mu = float(np.mean(means))\n",
+    "    lo, hi = np.percentile(means, [10, 90])\n",
+    "    return mu, float(lo), float(hi)\n",
+    "\n",
+    "# ----- Loop walk-forward -----\n",
+    "rows = []\n",
+    "df_cum = df_train0.copy()\n",
+    "for _, row in tqdm(df_walk.iterrows(), total=len(df_walk), desc=\"Walk-Forward\"):\n",
+    "    y_hist = df_cum[TARGET].values\n",
+    "    x_hist = df_cum[feature_cols].values\n",
+    "    x_future = row[feature_cols].values[np.newaxis, :]\n",
+    "\n",
+    "    mu, lo, hi = forecast_one_step(y_hist, x_hist, x_future)\n",
+    "    rows.append({\n",
+    "        DATE:        row[DATE],\n",
+    "        \"pred_mean\": mu,\n",
+    "        \"pred_lo80\":  lo,\n",
+    "        \"pred_hi80\":  hi,\n",
+    "        \"slope_real\": float(row[TARGET]),\n",
+    "    })\n",
+    "    # Atualiza histórico\n",
+    "    df_cum = pd.concat([df_cum, row.to_frame().T], ignore_index=True)\n",
+    "\n",
+    "# ----- Salva predições -----\n",
+    "pred_df = pd.DataFrame(rows)\n",
+    "pred_df.to_parquet(PRED_PARQ, index=False)\n",
+    "\n",
+    "# ----- Calcula métricas -----\n",
+    "mae = float(np.mean(np.abs(pred_df[\"pred_mean\"] - pred_df[\"slope_real\"])))\n",
+    "cover = float(\n",
+    "    np.mean((pred_df[\"slope_real\"] >= pred_df[\"pred_lo80\"]) &\n",
+    "            (pred_df[\"slope_real\"] <= pred_df[\"pred_hi80\"]))\n",
+    ")\n",
+    "METRICS_JS.write_text(json.dumps({\"MAE\": mae, \"IC80_coverage\": cover}, indent=2))\n",
+    "print(f\"✅ Walk-forward concluído. MAE = {mae:.3f} / cobertura80% = {cover*100:.1f}%\")\n"
+   ],
+   "id": "d49797756dad0d90",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
